package model;

public enum TypePoste {
    CADRE,
    CHEF_BUREAU,
    CHEF_SERVICE,
    DIRECTEUR,
    DIRECTEUR_GENERAL
}
